# family-budget

./: .env_example  .gitignore  Dockerfile  README.md  codes.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  schema.yml  utils.py
budget/: admin.py  enums.py  models.py  serializers.py  tests.py  views.py
budget/migrations/: 0001_initial.py  0002_auto_20220907_0929.py  0002_remove_budget_shared_account_budget_shared_accounts_and_more.py
family_budget/: settings.py  urls.py
fixtures/: budgets.json  users.json
user/: serializers.py  tests.py  urls.py  views.py
